Fixed problem with horizontal scroll

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 }
 
 body {
+  overflow-x: hidden;
+}
+
+body {
   margin: 0;
   padding: 0;
   font-family: Corbel;
